dataset1235/2025-2/610742602/users/1343319280/executions/677928262_1626817775.log
== RUN (2025-08-25 19:40:40)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" + round(area_circulo, 3))
print("Volume:" + round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:44:21)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" + round(area_circulo, 3))
print("Volume:" + round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Área do círculo:" + round(area_circulo, 3))
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:43:07)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:34:20)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:43:55)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(float("Área do círculo:" + round(area_circulo, 3)))
print(float("Volume:" + round(volume_esfera, 3)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float("Área do círculo:" + round(area_circulo, 3)))
                ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:27:24)
-- CODE: 
# Entrada 
raio = float(input("Digite o valor do raio: "))

area = math.pi * raio ** 2
volume = (4/3) math.pi * raio ** 3

print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:34:40)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo: round(area_circulo, 3)")
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:35:41)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:15:38)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:15:39)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:31:32)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(area)
          ^^^^
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:34:20)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:41:33)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:32:47)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:45:19)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:24:48)
-- CODE: 
# Entrada 
raio = float(input("Digite o valor do raio: "))

area = math.pi * raio**2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:43:10)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:35:42)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print("Área do círculo:" round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 9
    print("Área do círculo:" round(area_circulo, 3))
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:24:08)
-- CODE: 
# Entrada 
raio = input("Digite o valor do raio: ")

area = math.pi * raio**2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:15:36)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:27:25)
-- CODE: 
# Entrada 
raio = float(input("Digite o valor do raio: "))

area = math.pi * raio ** 2
volume = (4/3) math.pi * raio ** 3

print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 5
    volume = (4/3) math.pi * raio ** 3
                   ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:15:31)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:29:40)
-- CODE: 
# Entrada 
raio = float(input("Digite o valor do raio: "))

area = math.pi * raio ** 2
volume = (4 / 3) * math.pi * raio ** 3

# Saída
print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:14:30)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:36:20)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(round(area_circulo, 3))
print(round(volume_esfera, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:16:03)
-- CODE: 
input("Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente: ")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio, para determinar a área de um círculo e o volume de uma esfera, respectivamente:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:31:13)
-- CODE: 
# Entrada 
__import__math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    __import__math
NameError: name '__import__math' is not defined. Did you mean: '__import__'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:31:56)
-- CODE: 
# Entrada 
import math
raio = float(input("Digite o valor do raio: "))

area_circulo = math.pi * raio ** 2
volume_esfera = ((4 / 3) * math.pi * raio ** 3)

# Saída
print(area_circulo)
print(volume_esfera)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004188790204786391
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.7035074111598
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.075684676355
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.279762570686
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.1508659336
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.510321638291124
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:27:49)
-- CODE: 
# Entrada 
raio = float(input("Digite o valor do raio: "))

area = math.pi * raio ** 2
volume = (4/3) * math.pi * raio ** 3

print(area)
print(volume)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = math.pi * raio ** 2
           ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
